Fix NPM shrinkwrap with optional fsevents dependency

--- a/client/package.json
+++ b/client/package.json
@@ -95,6 +95,9 @@
     "stylelint-config-standard": "13.0.2",
     "webpack-dev-server": "1.16.2"
   },
+  "optionalDependencies": {
+    "fsevents": "^1.0.14"
+  },
   "browser": {
     "fs": false
   }
